02-Sep-2011 Updated many actions to take a semi-colon separated list of arguments. In real use cases, it was becoming time consuming to repeat calls to do the same thing with different arguments, e.g. remove platform filters.

01-Sep-2011 Removed legacy ArgumentProcessor interface and attribute. Replaced all existing uses of this (command switches in plugin packages) with Opus.Core.IAction classes.

31-Aug-2011 OSX Gcc compiler, archiver, and linker fixes. Dynamic libraries are not the same as for other platforms as they can be linked against but not loaded. The latter would require a bundle.

29-Aug-2011 Updated test packages to build under Unix, now that some packages are Windows specific.

26-Aug-2011 Removed OSX and Unix from supported platforms of Windows specific packages.

26-Aug-2011 Removed Windows as a supported platform for Gcc-4.4 and GccCommon-dev packages. Predicated test package scripts that reference Gcc on the supported platforms.

26-Aug-2011 Upgraded the definition files for those packages in the 'testpackages' root.

26-Aug-2011 Upgraded the definition files for those packages in the 'packages' root.

26-Aug-2011 Improved the build timing breakdown and display.

25-Aug-2011 Added QtCommon-dev package to share the common parts of the Qt packages.

25-Aug-2011 VisualC runtime checks are not compatible with managed C++ code.

25-Aug-2011 Fixing VSSolutionBuilder compilation errors when both C and CSharp toolchains are required in a build.

25-Aug-2011 Improved exception message if Opus cannot locate a class in it's module database to add option updates from.

25-Aug-2011 ModuleUtilities.GetModule will now return an IModule if it is a valid base class. This allows for base classes to also add option update delegates.

25-Aug-2011 Changed end of the build from "Build complete" to "Build finished" as complete sounds like success.

24-Aug-2011 Added C compiler option OmitFramePointer.
            Added Gcc and Mingw compiler option InlineFunctions.