@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{261CF4FA-E83C-4FED-A6B6-BFAC814DEB57}</ProjectGuid>
@@ -35,7 +35,7 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkProfile />
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -71,7 +71,6 @@
     <Compile Include="Actions\AddPlatformFilterAction.cs" />
     <Compile Include="Actions\AddSupportedPlatformAction.cs" />
     <Compile Include="Actions\BuildAction.cs" />
-    <Compile Include="Actions\ChangeDependenciesAction.cs" />
     <Compile Include="Actions\ChangeVersionAction.cs" />
     <Compile Include="Actions\CreateDebugProjectAction.cs" />
     <Compile Include="Actions\CreatePackageAtAction.cs" />
